refactor: TableGroupService 리팩터링