@@ -1,5 +1,12 @@
 package kitchenpos.application;
 
+import java.time.LocalDateTime;
+import java.util.List;
+import java.util.stream.Collectors;
+
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
 import kitchenpos.dao.OrderDao;
 import kitchenpos.dao.OrderTableDao;
 import kitchenpos.dao.TableGroupDao;
@@ -8,16 +15,6 @@ import kitchenpos.domain.OrderTable;
 import kitchenpos.domain.TableGroup;
 import kitchenpos.dto.TableGroupRequest;
 import kitchenpos.dto.TableGroupResponse;
-
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-import org.springframework.util.CollectionUtils;
-
-import java.time.LocalDateTime;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
@@ -37,50 +34,53 @@ public class TableGroupService {
     public TableGroupResponse create(TableGroupRequest tableGroupRequest) {
         List<Long> orderTableIds = tableGroupRequest.getOrderTableIds();
 
-        if (CollectionUtils.isEmpty(orderTableIds) || orderTableIds.size() < 2) {
-            throw new IllegalArgumentException("테이블 그룹은 2개 이상부터 지정할 수 있습니다.");
-        }
-
         List<OrderTable> savedOrderTables = orderTableDao.findAllByIdIn(orderTableIds);
+        validateNotExistTables(orderTableIds, savedOrderTables);
 
+        TableGroup tableGroup = tableGroupDao.save(new TableGroup(LocalDateTime.now(), savedOrderTables));
+        group(savedOrderTables, tableGroup);
+        return TableGroupResponse.from(tableGroup);
+    }
+
+    private void validateNotExistTables(List<Long> orderTableIds, List<OrderTable> savedOrderTables) {
         if (orderTableIds.size() != savedOrderTables.size()) {
             throw new IllegalArgumentException("존재하지 않는 테이블로 지정할 수 업습니다.");
         }
+    }
 
+    private void group(List<OrderTable> savedOrderTables, TableGroup tableGroup) {
+        tableGroup.addOrderTables(savedOrderTables);
         for (OrderTable savedOrderTable : savedOrderTables) {
-            if (!savedOrderTable.isEmpty() || Objects.nonNull(savedOrderTable.getTableGroupId())) {
-                throw new IllegalArgumentException("비어 있는 테이블로만 단체를 지정할 수 있습니다.");
-            }
-        }
-
-        TableGroup savedTableGroup = tableGroupDao.save(tableGroupRequest.toEntity(LocalDateTime.now()));
-
-        Long tableGroupId = savedTableGroup.getId();
-        for (OrderTable savedOrderTable : savedOrderTables) {
-            savedOrderTable.groupedBy(tableGroupId);
             orderTableDao.save(savedOrderTable);
         }
-        savedTableGroup.addOrderTables(savedOrderTables);
-
-        return TableGroupResponse.from(savedTableGroup);
     }
 
     @Transactional
-    public void ungroup(final Long tableGroupId) {
-        final List<OrderTable> orderTables = orderTableDao.findAllByTableGroupId(tableGroupId);
+    public void ungroup(Long tableGroupId) {
+        List<OrderTable> orderTables = orderTableDao.findAllByTableGroupId(tableGroupId);
+        List<Long> orderTableIds = extractTableIds(orderTables);
+        validateNotCompletedOrderExist(orderTableIds);
+        ungroup(orderTables);
+    }
 
-        final List<Long> orderTableIds = orderTables.stream()
-                .map(kitchenpos.domain.OrderTable::getId)
+    private List<Long> extractTableIds(List<OrderTable> orderTables) {
+        return orderTables.stream()
+                .map(OrderTable::getId)
                 .collect(Collectors.toList());
+    }
 
-        if (orderDao.existsByOrderTableIdInAndOrderStatusIn(
-                orderTableIds, Arrays.asList(OrderStatus.COOKING.name(), OrderStatus.MEAL.name()))) {
+    private void validateNotCompletedOrderExist(List<Long> orderTableIds) {
+        boolean existNotCompletedOrder = orderDao.existsByOrderTableIdInAndOrderStatusIn(
+            orderTableIds, List.of(OrderStatus.COOKING.name(), OrderStatus.MEAL.name())
+        );
+        if (existNotCompletedOrder) {
             throw new IllegalArgumentException("완료되지 않은 주문이 있어서 해제할 수 없습니다.");
         }
+    }
 
+    private void ungroup(List<OrderTable> orderTables) {
         for (OrderTable orderTable : orderTables) {
-            orderTable.groupedBy(null);
-            orderTable.changeEmpty(false);
+            orderTable.ungroup();
             orderTableDao.save(orderTable);
         }
     }
